--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
                 <li>menu2</li>
                 <li>menu3</li>
             </ul>
+            
         </nav>
     </header>
-    <div class="visual"></div>
+    <div class="visual">
+        <h1>submenu1</h1>
+        <a href="#"></a>
+    </div>
     <div class="container"></div>
     <footer></footer>
 </body>
